^ [# 21368] Changed alignment of column items ^ Fixed CSS ordering for BlueStork (table styles out of place) ^ Separated out IE7 & IE8 CSS files (BlueStork)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@18307 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/bluestork/css/ie8.css
+++ b/administrator/templates/bluestork/css/ie8.css
@@ -1,5 +1,5 @@
 /**
- * @version		$Id$
+ * @version		$Id: ie7.css 17642 2010-06-12 23:54:01Z severdia $
  * @package		Joomla.Administrator
  * @subpackage	templates.bluestork
  * @copyright	Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
@@ -7,7 +7,7 @@
  */
 
 
-/* IE7 OVERRIDES */
+/* IE 8 OVERRIDES */
 
 input {
 	border-width: expression(this.type=="radio"?'0px':this.type=="checkbox"?'0px':'1px');
@@ -34,7 +34,4 @@ div.toolbar-list a {
 }
 input, select, button {
 	font-size:1em;
-}
-label.required  {
-	background: url(../images/required.png) 90% 1px no-repeat;
 }
